--- a/program/index.html
+++ b/program/index.html
@@ -8,11 +8,11 @@
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=default">
     </script>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="The first online knot theory congress">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | Conference Template</title>
+    <title>Program | The first online knot theory congress</title>
     <script type="text/javascript" src="/timezone.js"></script>
     <script type="text/javascript" src="/talks.js"></script>
     <script>
@@ -88,6 +88,9 @@
             </td>
             <td class="navigation">
                 <a title="Register for the Conference" class="navigation" href="registration"><p class="navigation">REGISTRATION</p></a>
+            </td>
+            <td class="navigation">
+              <a title="Conference Schedule" class="navigation" href="schedule"><p class="navigation">SCHEDULE</p></a> 
             </td>
             <td class="navigation">
                 <a title="Conference Program" class="navigation" href="program"><p class="navigation">PROGRAM</p></a> 
