--- a/registration/index.html
+++ b/registration/index.html
@@ -5,11 +5,11 @@
     <base href="..">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="The first online knot theory congress">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | Conference Template</title>
+    <title>Registration | The first online knot theory congress</title>
 </head>
 
 <body>
@@ -20,6 +20,9 @@
             </td>
             <td class="navigation">
                 <a title="Register for the Conference" class="navigation" href="registration"><p class="navigation">REGISTRATION</p></a>
+            </td>
+            <td class="navigation">
+              <a title="Conference Schedule" class="navigation" href="schedule"><p class="navigation">SCHEDULE</p></a> 
             </td>
             <td class="navigation">
                 <a title="Conference Program" class="navigation" href="program"><p class="navigation">PROGRAM</p></a> 
