small fix of scientist order, add participation free note

--- a/registration/index.html
+++ b/registration/index.html
@@ -37,7 +37,7 @@
         We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
         and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
     </p-->
-    <p>To participate in the congress as a listener or speaker, please contact us by email at knotscongress@gmail.com.</p>
+    <p>To participate in the congress as a listener or speaker, please contact us by email at knotscongress@gmail.com. The participation is free.</p>
     <!--
     <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
     -->
