--- a/registration/index.html
+++ b/registration/index.html
@@ -37,10 +37,8 @@
         We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
         and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
     </p-->
-    <p>To participate in the congress as a listener or speaker, please contact us by email at knotscongress@gmail.com. The participation is free.</p>
-    <!--
-    <iframe class="registration" src="EMBED LINK FOR GOOGLE FORM HERE"></iframe>
-    -->
+    <p>To participate in the congress please fill the <a href="https://forms.gle/sqWGWgiYuQmzTCL16" target="_blank">form</a> below or contact us by email at <a href="mailto:knotscongress@gmail.com">knotscongress@gmail.com</a>. The participation is free.</p>
+    <iframe class="registration" src="https://forms.gle/sqWGWgiYuQmzTCL16"></iframe>
     <!--p>
         Here&rsquo;s another paragraph of filler text:
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
