fix utc date on the home page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </table>
 
     <h1 class="congress-name">The first online knot theory congress</h1>
-    <p class="when-date">Feb 1 - Feb 5 UTC, 2025 by Zoom</p>
+    <p class="when-date">Feb 1 - Feb 5 (UTC+0), 2025 by Zoom</p>
 
     <div class="kauffman">
       <img src="assets/louis_kauffman.jpg" alt="Louis Kauffma"/>
