add plenary speakers to main page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,94 @@
       <h3 class="kauffman">In honor of the 80th birthday of Louis H. Kauffman</h3>
     </div>
 
+    <h2>Plenary speakers</h2>
+    <div class="plenary-speakers-container">
+        <div class="pl-speaker">
+            <img src="assets/Dror_Bar-Natan.png" alt="Dror Bar-Natan"><br/>
+            Dror Bar-Natan
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Joan_Birman.png" alt="Joan Birman"><br/>
+            Joan Birman
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Cameron_Gordon.png" alt="Cameron Gordon"><br/>
+            Cameron Gordon
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Sergei_Gukov.png" alt="Sergei Gukov"><br/>
+            Sergei Gukov
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Louis_Kauffman.png" alt="Lou Kauffman"><br/>
+            Lou Kauffman
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Akio_Kawauchi.png" alt="Akio Kawauchi"><br/>
+            Akio Kawauchi
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Mikhail_Khovanov.png" alt="Mikhail Khovanov"><br/>
+            Mikhail Khovanov
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Peter_Kronheimer.png" alt="Peter Kronheimer"><br/>
+            Peter Kronheimer
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Ciprian_Manolescu.png" alt="Ciprian Manolescu"><br/>
+            Ciprian Manolescu
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Vassily_Manturov.png" alt="Vassily Manturov"><br/>
+            Vassily Manturov
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Tomasz_Mrowka.png" alt="Tomasz Mrowka "><br/>
+            Tomasz Mrowka
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Kunio_Murasugi.png" alt="Kunio Murasugi"><br/>
+            Kunio Murasugi
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Peter_Ozsvath.png" alt="Peter Ozsvath"><br/>
+            Peter Ozsvath
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Lisa_Picirillo.png" alt="Lisa Picirillo"><br/>
+            Lisa Picirillo
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Jacob_Rasmussen.png" alt="Jacob Rasmussen"><br/>
+            Jacob Rasmussen
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Nicolai_Reshetikin.png" alt="Nicolai Reshetikin"><br/>
+            Nicolai Reshetikin
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Zoltan_Szabo.png" alt="Zoltan Szabo"><br/>
+            Zoltan Szabo
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Morwen_Thistlethwaite.png" alt="Morwen Thistlethwaite"><br/>
+            Morwen Thistlethwaite
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Vladimir_Turaev.png" alt="Vladimir Turaev"><br/>
+            Vladimir Turaev
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Victor_Vassiliev.png" alt="Victor Vassiliev "><br/>
+            Victor Vassiliev
+        </div>
+        <div class="pl-speaker">
+            <img src="assets/Edward_Witten.png" alt="Edward Witten"><br/>
+            Edward Witten
+        </div>
+    </div>
+
     <h2>Organising Committee</h2>
     <div class="sponsors-container">
         <div class="sponsor">
