remove rejected plenary speakers

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <img src="assets/Mikhail_Khovanov.png" alt="Mikhail Khovanov"><br/>
             Mikhail Khovanov
         </div>
-        <div class="pl-speaker">
+        <!-- div class="pl-speaker">
             <img src="assets/Peter_Kronheimer.png" alt="Peter Kronheimer"><br/>
             Peter Kronheimer
-        </div>
+        </div -->
         <div class="pl-speaker">
             <img src="assets/Ciprian_Manolescu.png" alt="Ciprian Manolescu"><br/>
             Ciprian Manolescu
@@ -94,10 +94,6 @@
         <div class="pl-speaker">
             <img src="assets/Tomasz_Mrowka.png" alt="Tomasz Mrowka "><br/>
             Tomasz Mrowka
-        </div>
-        <div class="pl-speaker">
-            <img src="assets/Kunio_Murasugi.png" alt="Kunio Murasugi"><br/>
-            Kunio Murasugi
         </div>
         <div class="pl-speaker">
             <img src="assets/Peter_Ozsvath.png" alt="Peter Ozsvath"><br/>
@@ -118,10 +114,6 @@
         <div class="pl-speaker">
             <img src="assets/Zoltan_Szabo.png" alt="Zoltan Szabo"><br/>
             Zoltan Szabo
-        </div>
-        <div class="pl-speaker">
-            <img src="assets/Morwen_Thistlethwaite.png" alt="Morwen Thistlethwaite"><br/>
-            Morwen Thistlethwaite
         </div>
         <div class="pl-speaker">
             <img src="assets/Vladimir_Turaev.png" alt="Vladimir Turaev"><br/>
