fix Kauffman first name

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             Sergei Gukov
         </div>
         <div class="pl-speaker">
-            <img src="assets/Louis_Kauffman.png" alt="Lou Kauffman"><br/>
-            Lou Kauffman
+            <img src="assets/Louis_Kauffman.png" alt="Louis Kauffman"><br/>
+            Louis Kauffman
         </div>
         <div class="pl-speaker">
             <img src="assets/Akio_Kawauchi.png" alt="Akio Kawauchi"><br/>
