fix winter time

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -75,8 +75,9 @@
             <option value="-07.00">CA time</option>
             <option value="-05.00">Chicago time</option>
             <option value="-04.00">NY time</option>
-            <option value="+01.00">UK time</option>
-            <option value="+03.00">Athens/Moscow time</option>
+            <option value="+00.00">UK time</option>
+            <option value="+02.00">Athens</option>
+            <option value="+03.00">Moscow time</option>
             <option value="+08.00">Chine time</option>
             <option value="+09.00">Japan time</option>
             </select>
