fix schedule time, change title, ad sponsored by

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="The first online knot theory congress">
+    <meta name="description" content="The First International On-line Knot Theory Congress">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>The first online knot theory congress</title>
+    <title>The First International On-line Knot Theory Congress</title>
 </head>
 
 <body>
@@ -38,13 +38,19 @@
         </tr>
     </table>
 
-    <h1 class="congress-name">The first online knot theory congress</h1>
+    <h1 class="congress-name">The First International On-line Knot Theory Congress</h1>
     <p class="when-date">Feb 1 - Feb 5 (UTC+0), 2025 by Zoom</p>
 
     <div class="kauffman">
       <img src="assets/louis_kauffman.jpg" alt="Louis Kauffma"/>
       <h3 class="kauffman">In honor of the 80th birthday of Louis H. Kauffman</h3>
     </div>
+
+    <p>
+        This on-line congress is an opportunity to share current research results on knot theory from around the world.
+        All talks will be on-line over zoom, with zoom links available on this webpage before the conference.
+        Questions about the conference can be directed to any members of the organising committee.
+    </p>
 
     <h2>Plenary speakers</h2>
     <div class="plenary-speakers-container">
@@ -125,6 +131,11 @@
             Edward Witten
         </div>
     </div>
+
+    <h2>Sponored by</h2>
+    <center>
+        <a href="https://amathr.org" target="_blank"><img src="assets/amr.png" alt="Association for mathematical research" width="300px"/></a>
+    </center>
 
     <h2>Organising Committee</h2>
     <div class="sponsors-container">
@@ -230,7 +241,7 @@
 
 
   <footer>
-      &copy; The first online knot theory congress
+      &copy; The First International On-line Knot Theory Congress
       &nbsp;|&nbsp; With the support of the <a href="https://www.ktrt-seminars.com" target="_blank">ktrt-seminars.com</a>
   </footer>
 
