--- a/program/index.html
+++ b/program/index.html
@@ -8,11 +8,11 @@
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=default">
     </script>
-    <meta name="description" content="The first online knot theory congress">
+    <meta name="description" content="The First International On-line Knot Theory Congress">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Program | The first online knot theory congress</title>
+    <title>Program | The First International On-line Knot Theory Congress</title>
     <script type="text/javascript" src="/timezone.js"></script>
     <script type="text/javascript" src="/talks.js"></script>
     <script>
@@ -105,9 +105,9 @@
             <option value="-05.00">Chicago time</option>
             <option value="-04.00">NY time</option>
             <option value="+00.00">UK time</option>
-            <option value="+02.00">Athens</option>
+            <option value="+02.00">Athens time</option>
             <option value="+03.00">Moscow time</option>
-            <option value="+08.00">Chine time</option>
+            <option value="+08.00">China time</option>
             <option value="+09.00">Japan time</option>
           </select>
         </div>
@@ -116,7 +116,7 @@
     <div id="content-container"></div>
 
     <footer>
-        &copy; The first online knot theory congress
+        &copy; The First International On-line Knot Theory Congress
         &nbsp;|&nbsp; With the support of the <a href="https://www.ktrt-seminars.com" target="_blank">ktrt-seminars.com</a>
     </footer>
 
