add ktrt to sponsors

--- a/index.html
+++ b/index.html
@@ -236,7 +236,11 @@
 
   <h2>Sponored by</h2>
   <center>
-      <a href="https://amathr.org" target="_blank"><img src="assets/amr.png" alt="Association for mathematical research" width="300px"/></a>
+    <div>
+        <a href="https://amathr.org" target="_blank"><img src="assets/amr.png" alt="Association for mathematical research" width="300px"/></a>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <a href="https://ktrt-seminars.com" target="_blank"><img src="assets/ktrt.png" alt="Seminars on knot theory and related topic" width="150px"/></a>
+    </div>
   </center>
 
   <footer>
