fix timezone calculation and html tags, update scientific committee

--- a/index.html
+++ b/index.html
@@ -59,10 +59,6 @@
             Dror Bar-Natan
         </div>
         <div class="pl-speaker">
-            <img src="assets/Joan_Birman.png" alt="Joan Birman"><br/>
-            Joan Birman
-        </div>
-        <div class="pl-speaker">
             <img src="assets/Cameron_Gordon.png" alt="Cameron Gordon"><br/>
             Cameron Gordon
         </div>
@@ -82,10 +78,6 @@
             <img src="assets/Mikhail_Khovanov.png" alt="Mikhail Khovanov"><br/>
             Mikhail Khovanov
         </div>
-        <!-- div class="pl-speaker">
-            <img src="assets/Peter_Kronheimer.png" alt="Peter Kronheimer"><br/>
-            Peter Kronheimer
-        </div -->
         <div class="pl-speaker">
             <img src="assets/Ciprian_Manolescu.png" alt="Ciprian Manolescu"><br/>
             Ciprian Manolescu
@@ -111,8 +103,8 @@
             Jacob Rasmussen
         </div>
         <div class="pl-speaker">
-            <img src="assets/Nicolai_Reshetikin.png" alt="Nicolai Reshetikin"><br/>
-            Nicolai Reshetikin
+            <img src="assets/Nicolai_Reshetikhin.png" alt="Nicolai Reshetikhin"><br/>
+            Nicolai Reshetikhin
         </div>
         <div class="pl-speaker">
             <img src="assets/Zoltan_Szabo.png" alt="Zoltan Szabo"><br/>
@@ -166,14 +158,6 @@
             <img src="assets/Illia_Rohozkin.png" alt="Illia Rohozkin"><br/>
             Illia Rohozkin
         </div>
-        <!--div class="sponsor">
-                <img src="assets/Yannis_Diamantis.png" alt="Yannis Diamantis"><br/>
-                Yannis Diamantis
-        </div>
-        <div class="sponsor">
-                <img src="assets/Jonathan_Schneider.png" alt="Jonathan Schneider"><br/>
-                Jonathan Schneider
-        </div-->
     </div>
 
 
