--- a/program/index.html
+++ b/program/index.html
@@ -75,6 +75,7 @@
         window.onload = function() {
             setupTalks();
             setupTalkTimes();
+            MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
             MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
         }
     </script>
