--- a/index.html
+++ b/index.html
@@ -224,6 +224,8 @@
         <a href="https://amathr.org" target="_blank"><img src="assets/amr.png" alt="Association for mathematical research" width="300px"/></a>
         <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <a href="https://ktrt-seminars.com" target="_blank"><img src="assets/ktrt.png" alt="Seminars on knot theory and related topic" width="150px"/></a>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <a href="https://mipt.ru" target="_blank"><img src="assets/mipt.png" alt="Moscow Institute of Physics and Technology" width="300px"/></a>
     </div>
   </center>
 
