fix Sponsored label

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       </div>
   </div>
 
-  <h2>Sponored by</h2>
+  <h2>Sponsored by</h2>
   <center>
     <div>
         <a href="https://amathr.org" target="_blank"><img src="assets/amr.png" alt="Association for mathematical research" width="300px"/></a>
