add williams college logo

--- a/index.html
+++ b/index.html
@@ -226,6 +226,8 @@
         <a href="https://ktrt-seminars.com" target="_blank"><img src="assets/ktrt.png" alt="Seminars on knot theory and related topic" width="150px"/></a>
         <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <a href="https://mipt.ru" target="_blank"><img src="assets/mipt.png" alt="Moscow Institute of Physics and Technology" width="300px"/></a>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <a href="https://www.williams.edu" target="_blank"><img src="assets/williams.png" alt="Williams College" width="150px"/></a>
     </div>
   </center>
 
