--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div class="sponsor">
             <img src="assets/Roger_Fenn.png" alt="Roger Fenn"><br/>
-            Roger Fenn
+            Roger Fenn (In memorium)
         </div>
         <div class="sponsor">
             <img src="assets/Seongjeong_Kim.png" alt="Seongjeong Kim"><br/>
@@ -170,7 +170,7 @@
       </div>
       <div class="scientist">
           <img src="assets/Roger_Fenn.png" alt="Roger Fenn"><br/>
-          Roger Fenn
+          Roger Fenn (In memorium)
       </div>
       <div class="scientist">
         <img src="assets/Cameron_Gordon.png" alt="Cameron Gordon"><br/>
