add speakers talks

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/calendar.css"/>
     <script type="text/javascript" async
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=default">
+        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
     <meta name="description" content="The First International On-line Knot Theory Congress">
     <meta name="resource-type" content="document">
