add moderators to the talks, add moderators page, store timezone to the session storage

--- a/index.html
+++ b/index.html
@@ -13,17 +13,6 @@
 </head>
 
 <body>
-
-    <!--div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
-        <div class="top-left">
-            <span class="title1">The first knot theory congress </span>
-        </div>
-        <div class="bottom-right">
-            February 01 -- 05 2025 <br> by Zoom
-        </div>
-    </div-->
-
     <table class="navigation">
         <tr>
             <td class="navigation">
@@ -213,6 +202,13 @@
           Andrei Vesnin
       </div>
   </div>
+
+  <h2>Moderators</h2>
+  Colin Adams, Carmen Caprau, Paolo Cavicchioli, Joye Chen, Qingying Deng, Neslihan Gugumcu, Seiichi Kamada, Seongjeong Kim, Thomas Kindred, Anastasios Kokkinakis, Sofia Lambropoulou, Lucrezia Lorenzi, Sonia Mahmoudi, Vassily Manturov, Igor Nikonov, Jonathan Schneider, Alexander Simons, Andrei Vesnin, Illia Rohozhkin.
+  <br/>
+  <br/>
+  <a href="/moderators">Schedule of moderators.</a>
+
 
   <h2>Sponsored by</h2>
   <center>
