fix margin of sponsors logos

--- a/index.html
+++ b/index.html
@@ -213,15 +213,11 @@
   <h2>Sponsored by</h2>
   <center>
     <div>
-        <a href="https://amathr.org" target="_blank"><img src="assets/amr.png" alt="Association for mathematical research" width="300px"/></a>
-        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <a href="https://ktrt-seminars.com" target="_blank"><img src="assets/ktrt.png" alt="Seminars on knot theory and related topic" width="150px"/></a>
-        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <a href="https://www.williams.edu" target="_blank"><img src="assets/williams.png" alt="Williams College" width="150px"/></a>
-        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <a href="https://www.ntua.gr" target="_blank"><img src="assets/ntua.png" alt="National Technical University of Athens" width="150px"/></a>
-        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <a href="https://mipt.ru" target="_blank"><img src="assets/mipt.png" alt="Moscow Institute of Physics and Technology" width="300px"/></a>
+        <a href="https://amathr.org" target="_blank" class="sponsor-link"><img src="assets/amr.png" alt="Association for mathematical research" width="300px"/></a>
+        <a href="https://ktrt-seminars.com" target="_blank" class="sponsor-link"><img src="assets/ktrt.png" alt="Seminars on knot theory and related topic" width="150px"/></a>
+        <a href="https://www.williams.edu" target="_blank" class="sponsor-link"><img src="assets/williams.png" alt="Williams College" width="150px"/></a>
+        <a href="https://www.ntua.gr" target="_blank" class="sponsor-link"><img src="assets/ntua.png" alt="National Technical University of Athens" width="150px"/></a>
+        <a href="https://mipt.ru" target="_blank" class="sponsor-link"><img src="assets/mipt.png" alt="Moscow Institute of Physics and Technology" width="300px"/></a>
     </div>
   </center>
 
