remove moderators page, add moderators pdf file

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   Colin Adams, Carmen Caprau, Paolo Cavicchioli, Joye Chen, Qingying Deng, Neslihan Gugumcu, Seiichi Kamada, Seongjeong Kim, Thomas Kindred, Anastasios Kokkinakis, Sofia Lambropoulou, Lucrezia Lorenzi, Sonia Mahmoudi, Vassily Manturov, Igor Nikonov, Jonathan Schneider, Alexander Simons, Andrei Vesnin, Illia Rohozhkin.
   <br/>
   <br/>
-  <a href="/moderators">Schedule of moderators.</a>
+  <a href="/assets/Knots Congress -- Schedule of Moderators.pdf">Schedule of moderators</a>
 
 
   <h2>Sponsored by</h2>
