add youtube and zoom links

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         Questions about the conference can be directed to any members of the organising committee.
     </p>
 
+    <br/>
+    <p>Recordings of talks for which speakers agree will be available at <a href="https://www.youtube.com/@InternationalKnotCongress2025" target="_blank">YouTube</a>.</p>
+
     <h2>Plenary speakers</h2>
     <div class="plenary-speakers-container">
         <div class="pl-speaker">
@@ -208,7 +211,6 @@
   <br/>
   <br/>
   <a href="/assets/Knots Congress -- Schedule of Moderators.pdf">Schedule of moderators</a>
-
 
   <h2>Sponsored by</h2>
   <center>
