--- a/program/index.html
+++ b/program/index.html
@@ -16,12 +16,13 @@
     <script type="text/javascript" src="/timezone.js"></script>
     <script type="text/javascript" src="/talks.js"></script>
     <script>
-        function createTalk(id, speaker, university, title, description, start, duration, moderators){
+        function createTalk(id, speaker, university, title, description, start, duration, moderators, zoom_link){
             return `
                 <table id="${id}">
                     <tr>
                         <td class="date" rowspan="3">
                             <div class="talk-time-value" talk_time_utc="${start}" duration="${duration}"></div>
+                            <div style="display: flex; line-height: 18px;"><img src="assets/zoom-logo.png" width="18 px" height="18px" style="margin-right: 3px;"/><a href="${zoom_link}" target="_blank">Zoom link for talk</a></div>
                         </td>
                         <td class="title">
                             ${title}
@@ -44,7 +45,7 @@
         function createTaskFromJs(day, part, sec, talk, obj){
             const speaker_id = obj.speaker.toLowerCase().replace(/[^a-z]/g,'');
             const id = `day_${day}_part_${part}_${sec < 1 ? 'plenary' : 'sec_' + sec}` + (sec < 1 ? '' : `_talk_${talk}`) + `_${speaker_id}`;
-            return createTalk(id, obj.speaker, obj.university, obj.title, obj.description, obj.start, obj.duration, obj.moderators);
+            return createTalk(id, obj.speaker, obj.university, obj.title, obj.description, obj.start, obj.duration, obj.moderators, obj.zoom_link);
         }
 
         function setupTalks(){
