Fix Roger Fenn memoriam label

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
         <div class="sponsor">
             <img src="assets/Roger_Fenn.png" alt="Roger Fenn"><br/>
-            Roger Fenn (In memoriam 1942-2024)
+            Roger Fenn<br/><span style="font-size: 10pt;">(In memoriam 1942-2025)</span>
         </div>
         <div class="sponsor">
             <img src="assets/Seongjeong_Kim.png" alt="Seongjeong Kim"><br/>
@@ -162,7 +162,7 @@
       </div>
       <div class="scientist">
           <img src="assets/Roger_Fenn.png" alt="Roger Fenn"><br/>
-          Roger Fenn (In memoriam 1942-2024)
+          Roger Fenn<br/><span style="font-size: 10pt;">(In memoriam 1942-2025)</span>
       </div>
       <div class="scientist">
         <img src="assets/Cameron_Gordon.png" alt="Cameron Gordon"><br/>
